# convert_kindle_vocab_to_anki

./: .gitignore  Cargo.toml  README.md  vocab_test.db
src/: arg_parse.rs  get_definition.rs  get_lookups.rs  lib.rs  main.rs
