[package]
name = "convert_kindle_vocab_to_anki"
version = "0.1.0"
authors = ["MrShiister <MrShiister@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
surf = "~2.2"
# json = "~0.12.4"
serde_json = "1.0"
futures = "~0.3.13"
